--- a/goal.yaml
+++ b/goal.yaml
@@ -2,64 +2,64 @@ run_id: "image-then-charsheet-01"
 description: "Generate an image of a character, then a character sheet for them."
 goal_type: natural_language
 prompt: |
-  0. Go to https://gemini.google.com/u/2/app
-  1. Paste the image from the clipboard with Command Key + v
-  2. In the text box, enter the prompt: "Change to a full length shot. Keep everything else the same. "
-  3. Click on the submit button at the bottom right.
-  4. Wait for 40 seconds for the image to be generated.
-  67. In the text box, enter the prompt: Change to a headshot, with a wide smile and sparkling eyes. 
-  68. Click on the submit button at the bottom right.
-  69. Wait for 40 seconds for the image to be generated.
-  70. In the text box, enter the prompt: Change to a headshot with a sad and thoughtful look. 
-  71. Click on the submit button at the bottom right.
-  72. Wait for 40 seconds for the image to be generated.
-  73. In the text box, enter the prompt: Change to a headshot showing a full laugh with a head tilted slightly. 
-  74. Click on the submit button at the bottom right.
-  19. Wait for 40 seconds for the image to be generated.
-  20. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, sitting on the sand with a wide smile, wearing the beach wear. 
-  21. Click on the submit button at the bottom right.
-  22. Wait for 40 seconds for the image to be generated.
-  23. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, sitting with legs wide open in a yoga pose on a beach towel, wearing the same beach wear. 
-  24. Click on the submit button at the bottom right.
-  25. Wait for 40 seconds for the image to be generated.
-  26. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, in a lush green park. Change attire to casual jeans and a t-shirt. Change pose to sitting on a park bench. 
-  27. Click on the submit button at the bottom right.
-  28. Wait for 40 seconds for the image to be generated.
-  29. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, in a park, doing a yoga tree pose, wearing athletic wear. 
-  30. Click on the submit button at the bottom right.
-  31. Wait for 40 seconds for the image to be generated.
-  32. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, in a park, running with a joyful expression, wearing athletic wear. 
-  33. Click on the submit button at the bottom right.
-  34. Wait for 40 seconds for the image to be generated.
-  41. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, in a professional setting, wearing an elegant dress. Change pose to standing near a window. 
-  42. Click on the submit button at the bottom right.
-  43. Wait for 40 seconds for the image to be generated.
-  44. In the text box, enter the prompt: Change to a portrait shot, in a dim-lit home. Change attire to loungewear. Change expression to a thoughtful look. 
-  45. Click on the submit button at the bottom right.
-  46. Wait for 40 seconds for the image to be generated.
-  47. In the text box, enter the prompt: Change to a waist-level shot, in a living room, wearing comfortable clothes. Change pose to sitting on a sofa. 
-  48. Click on the submit button at the bottom right.
-  49. Wait for 40 seconds for the image to be generated.
-  50. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, in a home setting, with an annoyed expression. Change pose to standing by the kitchen counter. 
-  51. Click on the submit button at the bottom right.
-  52. Wait for 40 seconds for the image to be generated.
-  53. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, at a party, wearing a stylish evening gown. Change pose to dancing with a joyful expression. 
-  54. Click on the submit button at the bottom right.
-  55. Wait for 40 seconds for the image to be generated.
-  56. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length shot, smiling brightly while holding a bouquet of flowers in a sun-drenched garden. 
-  57. Click on the submit button at the bottom right.
-  58. Wait for 40 seconds for the image to be generated.
-  59. In the text box, enter the prompt: Change to a waist-level shot, wearing a stylish evening gown, standing on a balcony at night with city lights in the background. 
-  60. Click on the submit button at the bottom right.
-  61. Wait for 40 seconds for the image to be generated.
-  62. In the text box, enter the prompt: Change to a close-up side profile, wearing traditional jewelry, in a temple with ornate carvings. 
-  63. Click on the submit button at the bottom right.
-  64. Wait for 40 seconds for the image to be generated.
-  65. In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length back profile, walking away on a cobblestone street in a winter coat. 
-  66. Click on the submit button at the bottom right.
-  35. In the text box, enter the prompt: Change to a waist-level shot, in a coffee house. Change attire to a modern business suit. Change pose to sitting at a table with a laptop. 
-  36. Click on the submit button at the bottom right.
-  37. Wait for 40 seconds for the image to be generated.
-  38. In the text box, enter the prompt: Change to a knee-level shot, in an office, wearing professional business attire. Change pose to standing confidently. 
-  39. Click on the submit button at the bottom right.
-  40. Wait for 40 seconds for the image to be generated.
+   Go to https://gemini.google.com/u/2/app
+   Paste the image from the clipboard with Command Key + v
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a park, running with a joyful expression, wearing athletic wear. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a professional setting, wearing an elegant dress. Change pose to standing near a window. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a portrait shot, in a dim-lit home. Change attire to loungewear. Change expression to a thoughtful look. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a waist-level shot, in a living room, wearing comfortable clothes. Change pose to sitting on a sofa. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a home setting, with an annoyed expression. Change pose to standing by the kitchen counter. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., at a party, wearing a stylish evening gown. Change pose to dancing with a joyful expression. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., smiling brightly while holding a bouquet of flowers in a sun-drenched garden. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a waist-level shot, wearing a stylish evening gown, standing on a balcony at night with city lights in the background. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a close-up side profile, wearing traditional jewelry, in a temple with ornate carvings. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length back profile, walking away on a cobblestone street in a winter coat. 
+   Click on the submit button at the bottom right.
+   In the text box, enter the prompt: Change to a waist-level shot, in a coffee house. Change attire to a modern business suit. Change pose to sitting at a table with a laptop. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a knee-level shot, in an office, wearing professional business attire. Change pose to standing confidently. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: "Change to a close up shot, full length shot. Keep everything else the same. "
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a headshot, with a wide smile and sparkling eyes. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a headshot with a sad and thoughtful look. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a headshot showing a full laugh with a head tilted slightly. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., sitting on the sand with a wide smile, wearing the beach wear. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., sitting with legs wide open in a yoga pose on a beach towel, wearing the same beach wear. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a lush green park. Change attire to casual jeans and a t-shirt. Change pose to sitting on a park bench. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
+   In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a park, doing a yoga tree pose, wearing athletic wear. 
+   Click on the submit button at the bottom right.
+   Wait for 100 seconds for the image to be generated.
